NetBSD Problem Report #50872

From www@NetBSD.org  Mon Feb 29 17:42:19 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id BE4DD7ABE8
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 29 Feb 2016 17:42:19 +0000 (UTC)
Message-Id: <20160229174218.DE6927ACD3@mollari.NetBSD.org>
Date: Mon, 29 Feb 2016 17:42:18 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.bin/netstat/if.c:147: weird coding ?
X-Send-Pr-Version: www-1.0

>Number:         50872
>Category:       bin
>Synopsis:       src/usr.bin/netstat/if.c:147: weird coding ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Feb 29 17:45:00 +0000 2016
>Closed-Date:    Mon Feb 29 20:41:16 +0000 2016
>Last-Modified:  Mon Feb 29 20:41:16 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160229
>Organization:
>Environment:
>Description:

src/usr.bin/netstat/if.c:147]: (style) Boolean result is used in bitwise operation. Clarify expression with parentheses.


Source code is

   if (!sflag & !pflag) {


Looks weird. Did someone muxup & and && ?

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50872 CVS commit: src/usr.bin/netstat
Date: Mon, 29 Feb 2016 13:21:15 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Mon Feb 29 18:21:15 UTC 2016

 Modified Files:
 	src/usr.bin/netstat: if.c

 Log Message:
 PR/50872: David Binderman: Use logical and instead of arithmetic


 To generate a diff of this commit:
 cvs rdiff -u -r1.82 -r1.83 src/usr.bin/netstat/if.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Mon, 29 Feb 2016 20:41:16 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.