PR/50872: David Binderman: Use logical and instead of arithmetic